Fix font size on small screens

--- a/src/app/value/value.component.css
+++ b/src/app/value/value.component.css
@@ -14,6 +14,12 @@ h1, h2 {
     font-family: 'Open Sans', sans-serif;
 }
 
+@media (max-width: 768px) { 
+    h2 {
+        font-size: 1.3em;
+    }
+}
+
 .value_image_overlay {
     max-height: 250px;
     padding-bottom: 10px;
